[package]
name = "iguana-interpreter"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-cash = {path="../../bitcoin-cash/bitcoin-cash", version="0.1.2"}
