[package]
name = "iguana-interpreter"
version = "0.2.3"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An interpreter for Bitcoin Cash Script which keeps track of preimages and stack item names"
homepage = "https://github.com/be-cash/iguana"
documentation = "https://github.com/be-cash/iguana"
repository = "https://github.com/be-cash/iguana"

[dependencies]
bitcoin-cash = {path="../../bitcoin-cash/bitcoin-cash", version="1.0.0-beta.0"}
thiserror = "1.0"
