[package]
name = "iguana-ws"
version = "0.1.1"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for serving iguana transactions via WebSocket (used in conjunction with iguana-ui)"
homepage = "https://github.com/be-cash/iguana"
documentation = "https://github.com/be-cash/iguana"
repository = "https://github.com/be-cash/iguana"

[dependencies]
warp = "0.2"
pretty_env_logger = "0.4"
tokio = { version = "0.2" }
bitcoin-cash = {path="../../bitcoin-cash/bitcoin-cash", version="0.1.3"}
futures = "0.3"
lazy_static = "1.4"
