[package]
name = "iguana-lib"
version = "0.1.2"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for interacting with iguana with JavaScript"
homepage = "https://github.com/be-cash/iguana"
documentation = "https://github.com/be-cash/iguana"
repository = "https://github.com/be-cash/iguana"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
iguana-interpreter = {path="../iguana-interpreter", version="0.1.0"}
bitcoin-cash = {path="../../bitcoin-cash/bitcoin-cash", version="0.1.2"}
bitcoin-cash-ecc = { path = "../../bitcoin-cash/bitcoin-cash-ecc", features = ["rust_ecc"], default-features = false, version="0.1.2" }
pretty-hex = "0.1"
hex = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
